tests/baselines/reference/parserErrorRecovery_ObjectLiteral2.errors.txt
==== tests/cases/compiler/parserErrorRecovery_ObjectLiteral2.ts (1 errors) ====
    var v = { a
    return;
    ~~~~~~
!!! parserErrorRecovery_ObjectLiteral2.ts(2,1): error TS1005: ':' expected.